--- a/TrailsTracker/src/main/resources/static/main.css
+++ b/TrailsTracker/src/main/resources/static/main.css
@@ -1,62 +1,221 @@
 @charset "UTF-8";
 
-.trailsImgThumbNail{
+header {
+	font-family: Helvetica;
+	background-color: #2B5401;
+	color: #fff;
+	padding: 20px;
+	margin-left: -100px;
+	margin-right: -100px;
+}
+
+h1 {
+	margin: 0;
+}
+
+h2 {
+	text-align: center;
+	font-size: 40px;
+	color: white;
+}
+
+#trailListDiv {
+	height: 690px;
+	overflow: auto;
+	scroll-behavior: smooth;
+}
+
+#table-forms form {
+	display: inline-block;
+	flex-direction: row;
+	background: rgba(255,255,255,0.2);
+	font-family: Helvetica;
+	font-size: 20px;
+	border-radius: 5px;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+	padding: 15px;
+}
+
+#table-forms input[type="number"] {
+	display: inline-block;
+
+}
+
+#table-forms button {
+	display: inline-block;
+	background-color: #458602;
+	color: #fff;
+	padding: 5px 20px;
+	border: none;
+	cursor: pointer;
+}
+
+body {
+	background-image:
+		url("https://images.unsplash.com/photo-1533240332313-0db49b459ad6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aGlraW5nfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60");
+	background-size: cover;
+	margin: 0 100px;
+	scroll-behavior: smooth;
+}
+
+.trailsImgThumbNail {
 	width: 200px;
 }
 
 * {
-    /* Change your font family */
-    font-family: Helvetica;
+	font-family: Helvetica;
 }
 
 .trail-table {
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 20px;
-    min-width: 400px;
-    border-radius: 5px 5px 0 0;
-    overflow: hidden;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+	background-color: white;
+	border-collapse: collapse;
+	margin: 25px 0;
+	font-size: 15px;
+	min-width: 400px;
+	border-radius: 5px 5px 0 0;
+	overflow: hidden;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 .trail-table thead tr {
-    background-color: #468802;
-    color: #ffffff;
-    text-align: left;
-    font-weight: bold;
+	background-color: #458602;
+	color: #ffffff;
+	text-align: left;
+	font-weight: bold;
 }
 
-.trail-table th,
-.trail-table td {
-    padding: 12px 15px;
+.trail-table th, .trail-table td {
+	padding: 12px 15px;
 }
 
 .trail-table tbody tr {
-    border-bottom: 1px solid #dddddd;
+	border-bottom: 1px solid #dddddd;
 }
 
 .trail-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
+	background-color: #f3f3f3;
 }
 
 .trail-table tbody tr:last-of-type {
-    border-bottom: 5px solid #468802;
+	border-bottom: 5px solid #458602;
 }
 
 .trail-table tbody tr.active-row {
-    font-weight: bold;
-    color: #009879;
+	font-weight: bold;
+	color: #458602;
 }
 
 .trail-table td {
-  padding: 12px 15px;
-  padding: 12px 15px;
-  border-right: 1px solid #d3d3d3; 
+	padding: 12px 15px;
+	padding: 12px 15px;
+	border-right: 1px solid #d3d3d3;
 }
 
+.log-trail-form {
+	background-color: white;
+	font-family: Helvetica;
+	margin: 25px 0;
+	font-size: 20px;
+	border-radius: 5px;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+	padding: 20px;
+}
 
+.log-trail-form h2 {
+	margin-top: 0;
+}
 
+.log-trail-form label {
+	display: inline-block;
+	width: 150px;
+}
 
+.log-trail-form input[type="text"], .log-trail-form textarea {
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	margin-bottom: 10px;
+	width: 100%;
+	box-sizing: border-box;
+}
 
+.log-trail-form select {
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	margin-bottom: 10px;
+	width: 150px;
+}
 
+.log-trail-form button[name="addTrailButton"] {
+	background-color: #458602;
+	color: #fff;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+}
 
+.log-trail-form button[name="addTrailButton"]:hover {
+	background-color: #2B5401;
+}
+
+/*EDIT TRAIL CSS*/
+.edit-trail-form {
+	background-color: white;
+	font-family: Helvetica;
+	margin: 25px 0;
+	font-size: 20px;
+	border-radius: 5px;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+	padding: 20px;
+}
+
+.edit-trail-form h2 {
+	margin-top: 0;
+}
+
+.edit-trail-form label {
+	display: inline-block;
+	width: 150px;
+}
+
+.edit-trail-form input[type="text"], .edit-trail-form textarea {
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	margin-bottom: 10px;
+	width: 100%;
+	box-sizing: border-box;
+}
+
+.edit-trail-form select {
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	margin-bottom: 10px;
+	width: 150px;
+}
+
+.edit-trail-form button[name="updateTrailButton"] {
+	background-color: #458602;
+	color: #fff;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+}
+
+.edit-trail-form button[name="updateTrailButton"]:hover {
+	background-color: #2B5401;
+}
+
+footer {
+	font-family: Helvetica;
+	text-align: left;
+	background-color: #2B5401;
+	color: #fff;
+	padding: 5px;
+	margin-left: -100px;
+	margin-right: -100px;
+}
