--- a/ngTrailTracker/src/app/components/trail-list/trail-list.component.html
+++ b/ngTrailTracker/src/app/components/trail-list/trail-list.component.html
@@ -34,9 +34,70 @@
       <option value="Point to Point">Point to Point</option></select
     ><br />
 
+    <label for="location">Location</label>
+    <input type="text" name="location" [(ngModel)]="newTrail.location" />
+
     <label for="img">Image URL</label>
     <input type="text" name="img" [(ngModel)]="newTrail.imageUrl" /><br />
 
     <button (click)="addTrail(newTrail)">Add Trail</button>
+  </form>
+</div>
+
+<h2>Edit Trail</h2>
+<div>
+  <label for="trailId">Select a Trail ID to edit:</label>
+  <select
+    name="trailId"
+    [(ngModel)]="selectedTrailId"
+    (change)="onTrailSelected()"
+  >
+    <option *ngFor="let trail of trails" [value]="trail.id">
+      {{ trail.id }}
+    </option>
+  </select>
+</div>
+<div *ngIf="editTrail">
+  <form>
+    <label for="name">Name</label>
+    <input type="text" name="name" [(ngModel)]="editTrail.name" /><br />
+
+    <label for="description">Description</label>
+    <textarea
+      name="description"
+      cols="30"
+      rows="10"
+      [(ngModel)]="editTrail.description"
+    ></textarea
+    ><br />
+
+    <label for="trailLength">Trail Length</label>
+    <input
+      type="number"
+      name="trailLength"
+      [(ngModel)]="editTrail.trailLength"
+    /><br />
+
+    <label for="elevationGain">Elevation Gain</label>
+    <input
+      type="number"
+      name="elevationGain"
+      [(ngModel)]="editTrail.elevationGain"
+    /><br />
+
+    <label for="routeType">Route Type</label>
+    <select name="routeType" [(ngModel)]="editTrail.routeType">
+      <option value="Loop">Loop</option>
+      <option value="Out and Back">Out and Back</option>
+      <option value="Point to Point">Point to Point</option></select
+    ><br />
+
+    <label for="location">Location</label>
+    <input type="text" name="location" [(ngModel)]="editTrail.location.name" />
+
+    <label for="img">Image URL</label>
+    <input type="text" name="img" [(ngModel)]="editTrail.imageUrl" /><br />
+
+    <button (click)="updateTrail(editTrail)">Update Trail</button>
   </form>
 </div>
