--- a/ngTrailTracker/src/app/app.component.html
+++ b/ngTrailTracker/src/app/app.component.html
@@ -1,2 +1,10 @@
-<app-home></app-home>
-<app-trail-list></app-trail-list>
+<body class="home-page">
+  <app-home class="container"></app-home>
+  <app-trail-list class="container"></app-trail-list>
+</body>
+
+<div>
+  <footer>
+    <p>Copyright © 2023 Kenny Yan</p>
+  </footer>
+</div>
